<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/bejelentkezesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginSTR"
        android:textSize="34sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="24sp"
        android:inputType="textEmailAddress"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/loginSTR"
        android:textSize="20sp"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registration"
        android:text="@string/registrationSTR"
        android:textSize="20sp"
        android:layout_margin="15dp"/>

</LinearLayout>