<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VasarlasSzuroActivity">

    <TextView
        android:id="@+id/Jegyvasarlas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JegyvasarlasSTR"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Spinner
        android:id="@+id/HelyekSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Jegyvasarlas"
        app:layout_constraintVertical_bias="0.07" />

    <RadioGroup
        android:id="@+id/fajtaRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelyekSpinner"
        app:layout_constraintVertical_bias="0.093"
        tools:layout_editor_absoluteX="16dp">

        <RadioButton
            android:id="@+id/fajtaRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tejles"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            tools:layout_editor_absoluteX="-9dp"
            tools:layout_editor_absoluteY="234dp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kedvezmenyes"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="283dp" />
    </RadioGroup>

    <Button
        android:id="@+id/keresBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="kereses"
        android:text="@string/keres"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fajtaRadioGroup"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keresBTN"
        app:layout_constraintVertical_bias="0.182" />

</androidx.constraintlayout.widget.ConstraintLayout>